--- a/index.html
+++ b/index.html
@@ -56,7 +56,15 @@
           <li><a href="#portfolio">Portfolio</a></li>
           <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSfUNHvvVgK9YkMGFidWYoOcuMYygfS0Z7_4gri1n7LugeH5bg/viewform">Apply</a></li>
           <li><a href="#pricing">Pricing</a></li>
-          <li><a href="http://www.dreambizbusinesssolutions.com/welcome/franchise">Franchisees</a></li>
+          <li class="drop-down"><a href="">Download</a>
+            <ul>
+              <li><a href="https://drive.google.com/file/d/1vsg9JyHBZ8fqRakf7JDuqGmz3HLmuikk/view">E MITRA BROCHURE</a></li>
+              <li><a href="https://drive.google.com/file/d/1lStRGqLaLUK88OI4bN8tch8Rtd8SHiXF/view">FRANCHISE AGREEMENT</a></li>
+              <li><a href="https://drive.google.com/drive/folders/1j4acjkUmHF3CVQaiVe9WYEGs-fftc7Ux">PAN FORMS</a></li>
+              <li><a href="https://drive.google.com/drive/folders/1vckacYzEM_o8JYB9Pcd5KLWnF2gs-iy_">SPICE FORM</a></li>
+              <li><a href="https://drive.google.com/drive/folders/1bnIvIXhUaxXgtWL5pDLW-TB6oi74MMSB">IRCTC FORMS </a></li>
+            </ul>
+          </li>
           <li><a href="#contact">Contact</a></li>
 
           <li class="get-started"><a href="http://www.dreambizbusinesssolutions.com/auth/login">E MITRA LOGIN</a></li>
@@ -472,7 +480,7 @@
                 <li class="na">MINI ATM</li>
               </ul>
               <div class="btn-wrap">
-                <a href="http://www.dreambizbusinesssolutions.com//welcome/bank" class="btn-buy">Buy Now</a>
+                <a href="bankdetails.html" class="btn-buy">Buy Now</a>
               </div>
             </div>
           </div>
@@ -490,7 +498,7 @@
                 <li class="na">MINI ATM</li>
               </ul>
               <div class="btn-wrap">
-                <a href="http://www.dreambizbusinesssolutions.com//welcome/bank" class="btn-buy">Buy Now</a>
+                <a href="bankdetails.html" class="btn-buy">Buy Now</a>
               </div>
             </div>
           </div>
@@ -508,7 +516,7 @@
                 <li>MINI ATM</li>
               </ul>
               <div class="btn-wrap">
-                <a href="http://www.dreambizbusinesssolutions.com//welcome/bank" class="btn-buy">Buy Now</a>
+                <a href="bankdetails.html" class="btn-buy">Buy Now</a>
               </div>
             </div>
           </div>
@@ -679,6 +687,32 @@
           <div class="col-lg-7">
             <p>
               ഹെഡ് ഓഫീസിൽ നിന്നും ആവശ്യപ്പെട്ട  ഡോക്യുമെന്റുകൾ ലഭിച്ചു പത്തു  പ്രവർത്തി  ദിവസങ്ങൾക്കുള്ളിൽ ശരിയാവുന്നതാണ്. IRCTC  എടുക്കുന്നവർക്ക് ഏജൻസി ആവാൻ 21-60 പ്രവർത്തി ദിവസവും എടുക്കുന്നതാണ്. 
+            </p>
+          </div>
+        </div>
+
+        <div class="row faq-item d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="500">
+          <div class="col-lg-5">
+            <i class="ri-question-line"></i>
+            <h4>ഇ മിത്രാ സേവാകേന്ദ്രയുടെ ഫ്രാഞ്ചസി
+              എടുത്തു കഴിഞ്ഞാൽ കമ്പനിയുമായി ഏതെങ്കിലും തരത്തിൽ എഗ്രിമെന്റെ ചെയ്യേണ്ടതുണ്ടോ?  </h4>
+          </div>
+          <div class="col-lg-7">
+            <p>
+              ഉണ്ട്. കമ്പനിയുടെ നിർദ്ദേശങ്ങൾ പാലിച്ചു നടത്തുന്നതിനുള്ള കമ്പനിയുമായുള്ള എഗ്രിമെന്റെ ഫ്രാഞ്ചസി എടുക്കുന്നവർ ചെയ്യേണ്ടതാണ് എഗ്രിമെന്റെ ചെയ്യുന്നതിനായി ₹300 രൂപ പെയ്മെന്റെ  ചെയ്തതിനുശേഷം നിങ്ങളുടെ സ്ഥാപനം തുടങ്ങുന്ന സ്ഥലത്തിന്റെ അഡ്രസ്സും സ്ഥലത്തിന്റെ ഫോട്ടോയും കമ്പനിക്ക് 
+അയച്ചു കഴിഞ്ഞാൽ എഗ്രിമെൻറ് മുദ്ര പേപ്പറിൽ പ്രിൻറ് എടുത്തു നിങ്ങളുടെ പോസ്റ്റൽ അഡ്രസ്സിൽ അയച്ചു തരുന്നതാണ്.
+            </p>
+          </div>
+        </div>
+
+        <div class="row faq-item d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="500">
+          <div class="col-lg-5">
+            <i class="ri-question-line"></i>
+            <h4>ഈ മിത്ര സേവ കേന്ദ്ര ഫ്രാഞ്ചസി സ്ഥാപനം തുടങ്ങിക്കഴിഞ്ഞു പിന്നീട് ഏതെങ്കിലും തരത്തിലുള്ള പെയ്മെന്റെ കമ്പനിക്ക് നൽകേണ്ടതുണ്ടോ?  </h4>
+          </div>
+          <div class="col-lg-7">
+            <p>
+              ഉണ്ട്.എല്ലാ വർഷവും നിങ്ങളുടെ ഫ്രാഞ്ചസിയുടെ റിന്യൂവൽ ചാർജ് ആയ ₹500 രൂപ ഫ്രാഞ്ചസി പുതുക്കുന്നതിനായി നിങ്ങൾ അടയ്ക്കേണ്ടതാണ്
             </p>
           </div>
         </div>
