--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <meta content="width=device-width, initial-scale=1.0" name="viewport">
+  <meta content="width=device-width, initial-scale=1.0" name="viewport">6
 
   <title>E MITRA SEVA KENDRA | DREAMBIZ BUSINESS SOLUTIONS PVT.LTD </title>
   <meta content="E MITRA SEVA KENDRA" name="descriptison">
@@ -199,7 +199,7 @@
                 <div class="col-md-6 d-md-flex align-items-md-stretch">
                   <div class="count-box">
                     <i class="icofont-simple-smile"></i>
-                    <span data-toggle=>1200+</span>
+                    <span data-toggle=>1500+</span>
                     <p><strong>Happy trainees</strong> 
                   </div>
                 </div>
@@ -207,7 +207,7 @@
                 <div class="col-md-6 d-md-flex align-items-md-stretch">
                   <div class="count-box">
                     <i class="icofont-document-folder"></i>
-                    <span data-toggle=>650+</span>
+                    <span data-toggle=>850+</span>
                     <p><strong>Franchise</strong> 
                   </div>
                 </div>
@@ -215,7 +215,7 @@
                 <div class="col-md-6 d-md-flex align-items-md-stretch">
                   <div class="count-box">
                     <i class="icofont-clock-time"></i>
-                    <span data-toggle=>3+</span>
+                    <span data-toggle=>4+</span>
                     <p><strong>Years of experience</strong> 
                   </div>
                 </div>
