--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <meta content="width=device-width, initial-scale=1.0" name="viewport">6
+  <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title>E MITRA SEVA KENDRA | DREAMBIZ BUSINESS SOLUTIONS PVT.LTD </title>
   <meta content="E MITRA SEVA KENDRA" name="descriptison">
@@ -123,11 +123,11 @@
 
 
           <div class="col-lg-2 col-md-4 col-6">
-            <img src="assets/img/clients/e mitra seva kendra irctc.png" class="img-fluid" alt="" data-aos="zoom-in" data-aos-delay="500">
+            <img src="assets/img/clients/rupay mitra emitra seva kendra.png" class="img-fluid" alt="" data-aos="zoom-in" data-aos-delay="500">
           </div>
 
           <div class="col-lg-2 col-md-4 col-6">
-            <img src="assets/img/clients/e mitra seva kendra money trnsfer.png" class="img-fluid" alt="" data-aos="zoom-in">
+            <img src="assets/img/clients/learn mitra emitra seva kendra.png" class="img-fluid" alt="" data-aos="zoom-in">
           </div>
 
           <div class="col-lg-2 col-md-4 col-6">
@@ -143,7 +143,7 @@
           </div>
 
           <div class="col-lg-2 col-md-4 col-6">
-            <img src="assets/img/clients/e mitra seva kendra eduction.png" class="img-fluid" alt="" data-aos="zoom-in" data-aos-delay="500">
+            <img src="assets/img/clients/e mitra seva kendra irctc.png" class="img-fluid" alt="" data-aos="zoom-in" data-aos-delay="500">
           </div>
           
           
