--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
-
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Manjari&display=swap" rel="stylesheet">
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="assets/vendor/icofont/icofont.min.css" rel="stylesheet">
@@ -199,7 +201,7 @@
                 <div class="col-md-6 d-md-flex align-items-md-stretch">
                   <div class="count-box">
                     <i class="icofont-simple-smile"></i>
-                    <span data-toggle=>1500+</span>
+                    <span data-toggle=>2000+</span>
                     <p><strong>Happy trainees</strong> 
                   </div>
                 </div>
@@ -207,7 +209,7 @@
                 <div class="col-md-6 d-md-flex align-items-md-stretch">
                   <div class="count-box">
                     <i class="icofont-document-folder"></i>
-                    <span data-toggle=>850+</span>
+                    <span data-toggle=>950+</span>
                     <p><strong>Franchise</strong> 
                   </div>
                 </div>
@@ -215,7 +217,7 @@
                 <div class="col-md-6 d-md-flex align-items-md-stretch">
                   <div class="count-box">
                     <i class="icofont-clock-time"></i>
-                    <span data-toggle=>4+</span>
+                    <span data-toggle=>5+</span>
                     <p><strong>Years of experience</strong> 
                   </div>
                 </div>
@@ -736,9 +738,9 @@
               <p>Do you want to start a good business with low investment.
                 take this opportunity start a public online service center</p>
               <div class="social-links">
-                <a href="https://www.youtube.com/channel/UCXrHX8GtH_uaGKwL1yYiXng" class="twitter"><i class="icofont-brand-youtube"></i></a>
-                <a href="https://www.facebook.com/dreambizbusiness" class="facebook"><i class="icofont-facebook"></i></a>
-                <a href="https://www.instagram.com/dreambiz_kerala/" class="instagram"><i class="icofont-instagram"></i></a>
+                <a href="https://www.youtube.com/c/EMITRASEVAKENDRAKERALA" class="twitter"><i class="icofont-brand-youtube"></i></a>
+                <a href="https://www.facebook.com/emitrasevakendrakerala" class="facebook"><i class="icofont-facebook"></i></a>
+                <a href="https://www.instagram.com/emitrasevakendra_kerala/" class="instagram"><i class="icofont-instagram"></i></a>
                 <a href="https://www.linkedin.com/company/dreambiz" class="linkedin"><i class="icofont-linkedin"></i></a>
               </div>
             </div>
@@ -759,6 +761,8 @@
               <div>
                 <i class="ri-phone-line"></i>
                 <p>+91 7025 369 633</p>
+                <i class="ri-phone-line"></i>
+                <p>+91 974 6097 552</p>
               </div>
 
             </div>
