--- a/index.html
+++ b/index.html
@@ -499,15 +499,15 @@
 
           <div class="col-lg-4 col-md-6 mt-4 mt-md-0">
             <div class="box recommended" data-aos="zoom-in" data-aos-delay="100">
-              <h3>Full Pack </h3>
+              <h3>Standard Pack</h3>
               <h4><sup>₹</sup>20000<span> + GST</span></h4>
               <ul>
                 <li>TRAINING </li>
                 <li>E MITRA CSP</li>
                 <li>3+ AGENCY LOGIN </li>
-                <li>IRCTC AGENCY</li>
-               
-                <li >MINI ATM</li>
+                 <li class="na">IRCTC AGENCY</li>
+                <li class="na">BIOMETRIC DEVICE </li>
+                <li class="na">MINI ATM</li>
               </ul>
               <div class="btn-wrap">
                 <a href="bankdetails.html" class="btn-buy">Buy Now</a>
