--- a/bankdetails.html
+++ b/bankdetails.html
@@ -79,11 +79,11 @@
           <div class="col-lg-4 portfolio-info">
             <h3>BANK DETAILS</h3>
             <ul>
-              <li><strong>Bank Name</strong> : CSB ( Catholic Syrian Bank ) </li>
-              <li><strong>Account Number</strong> : 0381-04240256-195001</li>
-              <li><strong>IFSC CODE </strong>:  CSBK0000381</li>
+              <li><strong>Bank Name</strong> : HDFC Bank </li>
+              <li><strong>Account Number</strong> : 50200089946781</li>
+              <li><strong>IFSC CODE </strong>:  HDFC0001594</li>
               <li><strong>Account Holder Name </strong>: E MITRA SEVA KENDRA</li>
-              <li><strong>Branch </strong>:  CSB, Kottakkal</li>
+              <li><strong>Branch </strong>:  HDFC, Kottakkal</li>
             </ul>
 
           
