--- a/index.html
+++ b/index.html
@@ -560,7 +560,7 @@
           <div class="col-lg-4 col-md-6 mt-4 mt-md-0">
             <div class="box recommended" data-aos="zoom-in" data-aos-delay="100">
               <h3>Standard Pack</h3>
-              <h4><sup>₹</sup>20000<span> + GST</span></h4>
+              <h4><sup>₹</sup>25000</h4>
               <ul>
                 <li>TRAINING </li>
                 <li>E MITRA CSP</li>
